<resources>
    <string name="app_name">luga_luga</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_Login">Login</string>
    <string name="hint_esqueci_senha">Esqueci Minha Senha</string>
    <string name="Login">Login</string>
    <string name="fazer_cadastro">Fazer Cadastro</string>

    <string name="tv_produto">Nome Produto</string>
    <string name="tv_preco">R$ 00,00</string>
    <string name="tv_descricao">LINGUICA COM PÃO E FAROFA É MUITO BOM</string>
    <string name="tv_qtdProduto">10pc</string>
    <string name="btn_alugar">Alugar</string>

</resources>